changed original template

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentences about yourself. Add a heading. Post it to your basecamp</p>
+  <p>Hello! This is my first website!</p>
+  <p>My name is Ben Pazner, and I am a senior at Jones College Prep high school.</p>
+  <p>I am excited for this class as it is my first time learning web development, but I have always been interested in computer science.</p>
 </body>
 </html>
