changed sentence order

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <p>Hello! This is my first website!</p>
   <p>My name is Ben Pazner, and I am a senior at Jones College Prep high school.</p>
-  <p>I am excited for this class as it is my first time learning web development, but I have always been interested in computer science.</p>
+  <p>This is my first time learning web development, but I have always been interested in computer science, so I am excited for this course.</p>
 </body>
 </html>
